--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
   <h1>Hello, world!</h1>
-  <p>Welcome to my static website.</p>
+  <p>Welcome to Elevate Labs</p>
+  <p>Elevate Labs is a forward-thinking edtech company committed to transforming how people learn and grow in the digital age. 
+    With a strong emphasis on interactive and skill-based learning, Elevate Labs designs tools and platforms that help users 
+    improve cognitive abilities, professional skills, and overall personal development. The company blends modern technology 
+    with user-centered design to create engaging educational experiences that promote lifelong learning. Whether you're looking 
+    to sharpen your communication, boost productivity, or expand your knowledge, Elevate Labs provides innovative solutions tailored 
+    to meet the evolving needs of learners around the world.</p>
 </body>
 </html>
