--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <h1>From Code to Cloud — The DevOps Way!</h1>
   <p>Welcome to Elevate Labs</p>
   <p>Elevate Labs is a forward-thinking edtech company committed to transforming how people learn and grow in the digital age. 
     With a strong emphasis on interactive and skill-based learning, Elevate Labs designs tools and platforms that help users 
